<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image"
    android:padding="24dp">

    <!-- Wrapper to move all elements down -->
    <LinearLayout
        android:id="@+id/contentWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@drawable/rounded_transparent"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true">

        <!-- Welcome Title -->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_brain_tumor_detection"
            android:textSize="26sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:gravity="center" />

        <!-- Subtitle -->
        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_comprehensive_solution_for_brain_tumor_detection_and_monitoring"
            android:textSize="20sp"
            android:textColor="#CCCCCC"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:padding="8dp" />

        <!-- Button -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="48dp">

            <Button
                android:id="@+id/getStartedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_started"
                android:backgroundTint="#BBDEFB"
                android:textColor="#000000"
                android:textSize="20sp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
